--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "keywords": [
     "sanity"
