--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
+    "prettier-plugin-groq": "^0.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
