--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "sanity dev",
     "start": "sanity start",
-    "build": "sanity build",
-    "deploy": "sanity deploy",
+    "build": "npx sanity typegen generate && sanity build",
+    "deploy": "npx sanity typegen generate && sanity deploy",
     "deploy-graphql": "sanity graphql deploy",
     "typegen:client": "npx sanity typegen generate",
     "typegen:server": "npx sanity typegen generate --path '/server/schemaTypes/*.{ts,tsx,js,jsx}' --generates '/server/sanity.types.ts'",
@@ -19,7 +19,6 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.64.1",
-    "next-sanity": "^9.8.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.64.1",
