--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-sanity": "^9.8.15",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
