--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,14 @@
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.0.4",
     "@vis.gl/react-google-maps": "^1.4.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.1",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
@@ -36,6 +37,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
