--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.0.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vis.gl/react-google-maps": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
