--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "embla-carousel-react": "^8.5.2",
     "form-data": "^4.0.1",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.454.0",
