--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
+    "@sanity/asset-utils": "^2.2.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/preview-url-secret": "^2.0.4",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -30,13 +31,16 @@
     "embla-carousel-react": "^8.5.2",
     "form-data": "^4.0.1",
     "framer-motion": "^11.14.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-sanity": "^9.8.15",
     "nextjs-toploader": "^3.7.15",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-leaflet": "^5.0.0-rc.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
@@ -45,8 +49,10 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/formidable": "^3.4.5",
+    "@types/leaflet": "^1.9.16",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
