--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node -r esm src/sanity/migrate.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -29,10 +30,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.2",
+    "esm": "^3.2.25",
     "form-data": "^4.0.1",
     "framer-motion": "^11.14.4",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
+    "nanoid": "^5.1.2",
     "next": "15.0.2",
     "next-sanity": "^9.8.15",
     "nextjs-toploader": "^3.7.15",
@@ -43,15 +47,17 @@
     "react-leaflet": "^5.0.0-rc.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/formidable": "^3.4.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.16",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20",
+    "@types/node": "^20.17.19",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -60,6 +66,6 @@
     "postcss": "^8",
     "prettier-plugin-groq": "^0.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
