--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.454.0",
     "nanoid": "^5.1.2",
     "next": "15.0.2",
+    "next-intl": "^3.26.5",
     "next-sanity": "^9.8.15",
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.10.0",
