--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "off", // Ignore unused variables
+    "@typescript-eslint/no-explicit-any": "off", // Allow "any" type
+    "@next/next/no-img-element": "off", // Allow <img> instead of <Image />
+    "react-hooks/exhaustive-deps": "warn", // Only warn instead of error
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off", // Allow "!" in optional chaining
+    "@typescript-eslint/no-require-imports": "off" // Allow `require()` imports
+  }
 }
